misc bug fixes and example correction
